# FusedMoEFlagship

./: .gitignore  CMakeLists.txt  README.md  check_ws.cpp  record.txt
docs/: FL_PLUGIN_INTEGRATION.md
op_host/: fused_moe_flagship.cpp
op_kernel/: fused_moe_flagship.cpp  fused_moe_tiling.h
python/: fused_moe_ascendc.py  test_fused_moe.py
torch_op/: embed_binary.py  embed_source.py  fused_moe_flagship_op.cpp
vllm-plugin-FL/: README.md  setup.py
vllm-plugin-FL/benchmarks/: benchmark_throughput_serve.py
vllm-plugin-FL/benchmarks/flagos_eval/: README.md
vllm-plugin-FL/csrc/: CMakeLists.txt  registration.h
vllm-plugin-FL/csrc/cuda/: CMakeLists.txt  torch_bindings.cpp  weak_ref_tensor.cpp
vllm-plugin-FL/docker/: build.sh
vllm-plugin-FL/docker/ascend/: Dockerfile
vllm-plugin-FL/docker/ascend/scripts/: mooncake_installer.sh
vllm-plugin-FL/docker/cuda/: Dockerfile
vllm-plugin-FL/examples/: minimax_m27_offline_inference.py
vllm-plugin-FL/requirements/: musa.txt
vllm-plugin-FL/tests/: conftest.py  run.py
vllm-plugin-FL/tests/benchmarks/: __init__.py  test_benchmark_latency.py  test_benchmark_serve.py  test_benchmark_throughput.py  utils.py
vllm-plugin-FL/tests/benchmarks/configs/: smoke.yaml
vllm-plugin-FL/tests/e2e_tests/serving/: test_bge_m3.py  test_serving_smoke.py
vllm-plugin-FL/tests/models/qwen3_5/: 35b_tp4.yaml
vllm-plugin-FL/tests/models/qwen3_6/: 27b_tp2_eager.yaml  35b_a3b_tp2_eager.yaml
vllm-plugin-FL/tests/unit_tests/flaggems/: test_gems_whitelist.py
vllm-plugin-FL/tests/unit_tests/ops/: test_activation.py  test_layernorm.py  test_rotary_embedding.py
vllm-plugin-FL/tests/unit_tests/worker/: test_model_runner.py
vllm-plugin-FL/tests/utils/: model_config.py  platform_config.py
vllm-plugin-FL/vllm_fl/: __init__.py  utils.py  version.py
vllm-plugin-FL/vllm_fl/compilation/: graph.py
vllm-plugin-FL/vllm_fl/dispatch/: __init__.py  manager.py  policy.py
vllm-plugin-FL/vllm_fl/dispatch/config/: hygon.yaml  nvidia.yaml  sunrise.yaml
vllm-plugin-FL/vllm_fl/distributed/: communicator.py
vllm-plugin-FL/vllm_fl/ops/: _C_ops_registry.py  activation.py  custom_ops.py  layernorm.py  rotary_embedding.py
vllm-plugin-FL/vllm_fl/ops/fused_moe/: activation.py  fused_moe.py  fused_moe_utils.py  layer.py  router.py
vllm-plugin-FL/vllm_fl/quantization/: quant_linear.py
vllm-plugin-FL/vllm_fl/worker/: model_runner.py  worker.py
